--- a/manuscripts/24-causal-diagrams-tutorial-jb/short-causal-diagrams.qmd
+++ b/manuscripts/24-causal-diagrams-tutorial-jb/short-causal-diagrams.qmd
@@ -106,7 +106,7 @@ push_mods <-
 ## Introduction
 
 
-<!-- Correlation does not imply causation. This adage is widely known.
+Correlation does not imply causation. This adage is widely known.
 Nevertheless, many human scientists report manifest correlations and use
 hedging language that implies causation. However, such reporting
 typically lacks justification. Making matters worse, widely adopted
@@ -117,7 +117,7 @@ persistent confusion in the analysis and reporting of correlations
 continue to impede scientific progress, revealing a *causality crisis*
 [@bulbulia2022].
 
-We have reasons to hope for better. First, the open science movement has
+<!-- We have reasons to hope for better. First, the open science movement has
 demonstrated that attention to the problems of replication, analysis,
 and reporting can bring considerable improvements to the reliability of
 research within a short period. Although much remains to be
@@ -132,7 +132,7 @@ Although causal data science is still evolving [@vansteelandt2022;
 foundation is written in a system of mathematical proofs that bring
 confidence. Debates within the causal data sciences are peripheral to causal inference's theoretical and conceptual foundations. Given science's ability to self-correct, and causal inference's bedrock of theoretical and conceptual foundation, we can be
 optimistic for a rapid uptake of causal inference methodology across the human sciences that presently lack it. The articles in this special issue of *Evolutionary Human Sciences* give
-testimony to this hope.
+testimony to this hope. -->
 
 Within the frameworks of causal data science, causal diagrams, also
 known as 'directed acyclic graphs' or 'DAGs,' have been developed as
@@ -148,23 +148,19 @@ These frameworks differ from those of traditional data science by
 attempting to estimate pre-specified contrasts, or 'estimands,' among
 counterfactual states of the world. Although we assume these
 counterfactual states to be real, they must be simulated from data, under
-explicit assumptions (really *assertions*) that must be justified [@vansteelandt2012;
-@robins1986; @edwards2015]. These *structural assumptions (assertions)* differ from
-the *statistical assumptions* familiar to traditionally trained data
-scientists. Yet, because causal inference recovers counterfactuals by
-applying statistical models to observed data, careful statistical
-validations must also enter its workflows. We cannot assume that
+explicit assumptions (really *assertions*) that must be justified [@vansteelandt2012; @robins1986; @edwards2015]. These *structural assumptions (assertions)* differ from the *statistical assumptions* familiar to traditionally trained data scientists. Yet, because causal inference recovers counterfactuals by applying statistical models to observed data, careful statistical validations must also enter its workflows. We cannot assume that
 traditionally trained human scientists, even those with excellent
 statistical training, have familiarity with the demands of
 counterfactual inference [@ogburn2021; @bulbulia2023a]. Using causal
 diagrams without understanding causal inference risks inadvertently worsen
 the causality crisis by fostering misguided confidence where none is
-due. -->
+due.
 
 Here, I offer readers of *Evolutionary Human Science* practical guidance
-for creating causal diagrams.
+for creating effective, safe, causal diagrams.
 
-**Part 1** introduces core concepts and theories in causal data science, emphasising the fundamental assumptions and the demands they impose on causal inferential workflows. We review the motivation in causal data science for adopting an 'estimands first' approach — pre-specifying counterfactual contrasts to address a well-defined causal question within a clearly defined target population. 
+**Part 1** introduces core concepts and theories in causal data science, emphasising the fundamental assumptions and the demands they impose on causal inferential workflows. 
+<!-- We review the motivation in causal data science for adopting an 'estimands first' approach — pre-specifying counterfactual contrasts to address a well-defined causal question within a clearly defined target population.  -->
 <!-- Although the overview is brief, it provides a necessary orientation to settings in
 which causal diagrams possess their utility, outside of which their
 application offers no guarantees. -->
@@ -184,11 +180,9 @@ d. the target population for which the study aims to clarify the effects of inte
 
 **Part 3** uses sequentially ordered causal diagrams to clarify concepts of interaction (moderation) and effect modification.
 
+**Part 4** clarifies biases arising from measurement error. 
 
-**Part 4** clarifies biases arising from measurement error bias. 
-
-
-**Part 5** clarifies restriction biases arising from (a) attrition/ censoring; (b) mismatch between a study sample population and a target sample population. We also consider heterogeniety biases arising from failures to sufficiently restrict one's sample.
+**Part 5** clarifies restriction biases arising from (a) attrition/ censoring; (b) mismatch between a study sample population and a target sample population. We also consider heterogeneity biases arising from failures to sufficiently restrict one's sample.
 
 **Part 6** uses causal diagrams to clarify causal estimation in which there are multiple exposures, focussing on causal mediation, and time-varying treatments.
 
@@ -199,19 +193,14 @@ these resources, first by providing additional conceptual orientation to
 the frameworks and workflows of causal data science, outside of which
 the application of causal diagrams is risky; second, by underscoring the
 benefits of sequential order in one's causal diagrams to clarify demands
-for data collection and analysis; third by using causal diagrams to clarify threats to target validity arising from sample/target population mismatch, fourth, by using causal diagrams to clarify
-questions of causal interaction, mediation, and longitudinal feedback, about
-which there remains considerable confusions among many human scientists.
+for data collection and analysis; third by using causal diagrams to clarify threats to target validity arising from sample/target population mismatch, fourth, by using causal diagrams to clarify questions of causal interaction, mediation, and longitudinal feedback, about which there remains considerable confusion.
 
 
 ## Part 1. Overview of Causal Data Science
 
 The first step in answering a causal question is to ask it
 [@hernán2016]. Causal diagrams come later, when we consider which forms
-of data might enable us to address our pre-specified causal questions.
-<!-- This section introduces key concepts and broader workflows within which
-causal diagrams find their purposes and utilities. It begins by
-considering what is at stake when we ask a causal question. -->
+of data might enable us to address our pre-specified causal questions.>
 
 #### 1.1.1 The fundamental problem of causal inference
 
@@ -259,19 +248,20 @@ $$
 Notice that each unit can only be exposed to only one level of the exposure
 $A_i = a$ at a time. This implies that $\tau_i$, is not merely unobserved but inherently *unobservable* (see discussion in Appendix 3). 
 
-Although we cannot observe potential outcomes that do not occur, it is tempting to ask questions about them, 'What if Isaac Newton had not witnessed the falling apple?’ What if Leonardo da Vinci had never pursued art?' or 'What if Archduke Ferdinand had not been assassinated?' There are abundant examples from literature. Robert Frost contemplates, 'Two roads diverged in a yellow wood, and sorry I could not travel both, and be one traveller, long I stood...' (see: Robert Frost, 'The Road Not Taken':
-https://www.poetryfoundation.org/poems/44272/the-road-not-taken). We have counterfactual questions for our personal experiences: 'What if I had had not interviewed for that job?' 'What if I had stayed in that relationship?' We may speculate, with reasons, but we cannot directly observe the potential outcomes we would need to verify our speculations. The physics of middle-sized dry goods prevents the joint realisation of the facts required for quantitative comparisons. That individual causal effects cannot be identified from observations is known as '*the fundamental problem of causal inference*' [@rubin1976; @holland1986].
+<!-- Although we cannot observe potential outcomes that do not occur, it is tempting to ask questions about them, 'What if Isaac Newton had not witnessed the falling apple?’ What if Leonardo da Vinci had never pursued art?' or 'What if Archduke Ferdinand had not been assassinated?' There are abundant examples from literature. Robert Frost contemplates, 'Two roads diverged in a yellow wood, and sorry I could not travel both, and be one traveller, long I stood...' (see: Robert Frost, 'The Road Not Taken':
+https://www.poetryfoundation.org/poems/44272/the-road-not-taken). We have counterfactual questions for our personal experiences: 'What if I had had not interviewed for that job?' 'What if I had stayed in that relationship?' We may speculate, with reasons, but we cannot directly observe the potential outcomes we would need to verify our speculations. The physics of middle-sized dry goods prevents the joint realisation of the facts required for quantitative comparisons.  -->
+
+That individual causal effects cannot be identified from observations is known as '*the fundamental problem of causal inference*' [@rubin1976; @holland1986].
 
 
 #### 1.1.2 Causal effects from randomised experiments
 
-It is not feasible to compute individual causal effects. However, under
-certain assumptions, we can estimate *average* treatment effects -- also called 'marginal effects,' -- by comparing groups that have received different levels of treatment. The average treatment effect, $ATE$, is defined as the difference between the expected outcomes under treatment and contrast conditions. Suppose the treatment, $A$, is a binary
-variable $A \in \{0,1\}$:
+Although it is not typically feasible to compute individual causal effects. under certain assumptions, it may be possible to estimate *average* treatment effects -- also called 'marginal effects.'  The average treatment effect, $ATE$, is defined as the difference between the expected outcomes under treatment and contrast conditions. Consider a binary treatment, $A$ \in \{0,1\}$:
 
 $$
 \text{Average Treatment Effect}  = \mathbb{E}[Y(1)] - \mathbb{E}[Y(0)].
 $$
+
 A challenge remains in computing these treatment-group averages when individual causal effects are unobservable. Consider the problem framed in terms of *full data* that would be required to compute these averages — that is in terms of the complete counterfactual dataset where the missing potential outcomes, inherent in observational data, were somehow available:
 
 $$
