manuscript church cooperation updated
preloading all tables

--- a/manuscripts/24-lmtp-coop-church/man-lmtp-ow-coop-church.qmd
+++ b/manuscripts/24-lmtp-coop-church/man-lmtp-ow-coop-church.qmd
@@ -58,10 +58,9 @@ source(
   "https://raw.githubusercontent.com/go-bayes/templates/main/functions/experimental_funs.R"
 )
 
-# experimental functions (more functions)
-# source(
-#   "https://raw.githubusercontent.com/go-bayes/templates/main/functions/experimental_funs.R"
-# )
+source(
+  "https://raw.githubusercontent.com/go-bayes/templates/main/functions/experimental_funs.R"
+)
 
 
 ## WARNING SET THIS PATH TO YOUR DATA ON YOUR SECURE MACHINE. 
@@ -103,74 +102,262 @@ graph_density_of_exposure<- here_read("graph_density_of_exposure")
 transition_table_socialising <- here_read("transition_table_socialising")
 graph_density_of_exposure_socialising<- here_read("graph_density_of_exposure_socialising")
 
-graph_density_of_exposure_socialising + ggtitle("Socialing")
+graph_density_of_exposure_socialising + ggtitle("Weekly hours socialing")
+graph_density_of_exposure + ggtitle("Monthly religious service")
+
 
 # church outcomes
 
 # self reported behaviour 
+tab_compare_church_prosocial_behaviour_z<- here_read("tab_compare_church_prosocial_behaviour_z")
+tab_compare_church_prosocial_behaviour_raw<- here_read("tab_compare_church_prosocial_behaviour_raw")
+tab_compare_church_LOSS_prosocial_behaviour_z<- here_read("tab_compare_church_LOSS_prosocial_behaviour_z")
+tab_compare_church_LOSS_prosocial_behaviour_raw<- here_read("tab_compare_church_LOSS_prosocial_behaviour_raw")
 
-# for graph
-graph_table_church_self_reported_behaviour_outcomes <- here_read("group_tab_compare_behaviour_z")
-graph_table_church_self_reported_behaviour_outcomes
 
-# for table
-table_church_self_reported_behaviour_raw <- here_read("tab_compare_behaviour_raw")
-table_church_self_reported_behaviour_raw
+group_tab_compare_church_prosocial_behaviour_raw<- here_read("group_tab_compare_church_prosocial_behaviour_raw")
+group_tab_compare_church_LOSS_prosocial_behaviour_z<- here_read("group_tab_compare_church_LOSS_prosocial_behaviour_z")
+group_tab_compare_church_prosocial_behaviour_z<- here_read("group_tab_compare_church_prosocial_behaviour_z")
+group_tab_compare_church_LOSS_prosocial_behaviour_raw<- here_read("group_tab_compare_church_LOSS_prosocial_behaviour_raw")
 
-# z score table
-table_church_self_reported_behaviour_z <- here_read("tab_church_behaviour_z")
-table_church_self_reported_behaviour_z
 
-# loss
-output_tab_contrast_t2_hours_charity_loss <- here_read('output_tab_contrast_t2_hours_charity_loss')
-table_church_self_reported_behaviour_lost_z<- here_read("tab_compare_church_behaviour_lost_z")
-graph_table_church_self_reported_behaviour_outcomes_loss_z <- here_read("group_tab_compare_behaviour_z_loss")
-tab_compare_behaviour_loss_raw<- here_read("tab_compare_behaviour_loss_raw")
+group_tab_compare_church_prosocial_behaviour_z
+group_tab_compare_church_prosocial_behaviour_raw
+group_tab_compare_church_LOSS_prosocial_behaviour_z
+group_tab_compare_church_LOSS_prosocial_behaviour_raw
 
+
+
+plot_church_prosocial <- margot_plot(
+  group_tab_compare_church_prosocial_behaviour_z,
+  type = "RD",
+  title = "Religious service effect on reported donations and volunteering",
+  subtitle = ">= 1 x weekly service attendance",
+  xlab = "",
+  ylab = "",
+  estimate_scale = 1,
+  base_size = 8,
+  text_size = 2.5,
+  point_size = .5,
+  title_size = 12,
+  subtitle_size = 11,
+  legend_text_size = 8,
+  legend_title_size = 10,
+  x_offset = -1,
+  x_lim_lo = -1,
+  x_lim_hi =  .5
+)
+
+plot_church_prosocial
+
+
+plot_church_LOSS_prosocial <- margot_plot(
+  group_tab_compare_church_LOSS_prosocial_behaviour_z,
+  type = "RD",
+  title = "Religious service loss on reported donations and volunteering",
+  subtitle = "loss of any service attendance",
+  xlab = "",
+  ylab = "",
+  estimate_scale = 1,
+  base_size = 8,
+  text_size = 2.5,
+  point_size = .5,
+  title_size = 12,
+  subtitle_size = 11,
+  legend_text_size = 8,
+  legend_title_size = 10,
+  x_offset = -1,
+  x_lim_lo = -1,
+  x_lim_hi =  .5
+)
+
+plot_church_LOSS_prosocial
 
 # prejudice
 
-graph_table_church_prejudice <- here_read("group_tab_warm_church")
-table_church_prejudice  <- here_read("tab_warm_church")
+group_tab_compare_church_z <- here_read("group_tab_warm_church")
+tab_compare_church_z  <- here_read("tab_warm_church")
+
+tab_compare_church_z
+group_tab_compare_church_z
+
+
+plot_church_prejudice  <- margot_plot(
+  group_tab_compare_church_z,
+  type = "RD",
+  title = "Religious service effect on prejudice/acceptance",
+  subtitle = ">= 1 x weekly service attendance",
+  xlab = "",
+  ylab = "",
+  estimate_scale = 1,
+  base_size = 8,
+  text_size = 2.5,
+  point_size = .5,
+  title_size = 12,
+  subtitle_size = 11,
+  legend_text_size = 8,
+  legend_title_size = 10,
+  x_offset = -1,
+  x_lim_lo = -1,
+  x_lim_hi =  .5
+)
+
+plot_church_prejudice
+# 
+# ggsave(
+#   plot_prejudice_church,
+#   path = here::here(here::here(push_mods, "figs")),
+#   width = 8,
+#   height = 6,
+#   units = "in",
+#   filename = "plot_prejudice_church.png",
+#   device = 'png',
+#   limitsize = FALSE,
+#   dpi = 600
+# )
+
+
 
 
 # HELP RECEIVED
-graph_table_help_received <- here_read("group_tab_time_church")
-table_church_help_received <- here_read("tab_time_church")
+tab_church_help_received <- here_read('tab_church_help_received')
+group_tab_church_help_received <- here_read("group_tab_church_help_received")
 
-table_church_help_received
-graph_table_help_received
-
-table_church_help_received
-graph_table_help_received
+tab_church_help_received
+group_tab_church_help_received
 
 
+
+plot_church_help_received <- margot_plot(
+  group_tab_church_help_received,
+  type = "RR",
+  title = "Religious service effect on help received",
+  subtitle = ">= 1 x weekly service attendance",
+  xlab = "",
+  ylab = "",
+  estimate_scale = 1,
+  base_size = 8,
+  text_size = 2.5,
+  point_size = .5,
+  title_size = 12,
+  subtitle_size = 11,
+  legend_text_size = 8,
+  legend_title_size = 10,
+  x_offset = 0,
+  x_lim_lo = 0,
+  x_lim_hi =  2
+)
+
+plot_church_help_received
+
+######################
 ### SOCIALISING 
+######################
 
-## SELF REPORTED CHARITY
-graph_table_socialising_self_reported_behaviour_z <- here_read("group_tab_charity_time")
-graph_table_socialising_self_reported_behaviour_z
+## SELF REPORTED PROSOCIAL
+
+tab_socializing_prosocial_behaviour_raw<- here_read("tab_socializing_prosocial_behaviour_raw")
+tab_socializing_prosocial_behaviour_raw
+
+group_tab_socializing_prosocial_behaviour_raw<- here_read("group_tab_socializing_prosocial_behaviour_raw")
+group_tab_socializing_prosocial_behaviour_raw
 
 
-table_socialising_self_reported_behaviour <- here_read("tab_behaviour_charity_socialising_raw")
+tab_socializing_prosocial_behaviour_z<- here_read("tab_socializing_prosocial_behaviour_z")
+group_tab_socializing_prosocial_behaviour_z<- here_read("group_tab_socializing_prosocial_behaviour_z")
 
-table_socialising_self_reported_behaviour_z <- here_read("tab_charity_time")
-table_socialising_self_reported_behaviour_z
-table_socialising_self_reported_behaviour
+group_tab_socializing_prosocial_behaviour_z
+
+
+
+plot_socializing_prosocial<- margot_plot(
+  group_tab_socializing_prosocial_behaviour_z,
+  type = "RD",
+  title = "Socialising effect on charity",
+  subtitle = ">= 1.4  x weekly hours socialising",
+  xlab = "",
+  ylab = "",
+  estimate_scale = 1,
+  base_size = 8,
+  text_size = 2.5,
+  point_size = .5,
+  title_size = 12,
+  subtitle_size = 11,
+  legend_text_size = 8,
+  legend_title_size = 10,
+  x_offset = -1,
+  x_lim_lo = -1,
+  x_lim_hi =  .5
+)
+
+plot_socializing_prosocial
+
+
 
 
 ## Prejudice
-table_socialising_prejudice_z  <- here_read("tab_warm_socialising")
-table_socialising_prejudice_z
+tab_socialising_prejudice_z  <- here_read("tab_warm_socialising")
+tab_socialising_prejudice_z
 
-graph_table_socialising_prejudice_z  <- here_read("group_tab_warm_socialising")
-graph_table_socialising_prejudice_z
+group_table_socialising_prejudice_z  <- here_read("group_tab_warm_socialising")
+group_table_socialising_prejudice_z
+
+
+
+
+plot_warm_socialising <- margot_plot(
+  group_table_socialising_prejudice_z,
+  type = "RD",
+  title = "Socialing effect on prejudice/acceptance",
+  subtitle = ">= 1.4  x weekly hours socialising",
+  xlab = "",
+  ylab = "",
+  estimate_scale = 1,
+  base_size = 8,
+  text_size = 2.5,
+  point_size = .5,
+  title_size = 12,
+  subtitle_size = 11,
+  legend_text_size = 8,
+  legend_title_size = 10,
+  x_offset = -1,
+  x_lim_lo = -1,
+  x_lim_hi =  .5
+)
+
+plot_warm_socialising
+
 
 # socialising
-table_socialising_help_received<- here_read("tab_hours_only_help_received")
-graph_table_socialising_help_received <- here_read("group_tab_help_time")
-table_socialising_help_received
-graph_table_socialising_help_received
+
+tab_socialising_help_received<- here_read("tab_socialising_help_received")
+tab_socialising_help_received
+
+group_tab_socialising_help_received <- here_read("group_tab_socialising_help_received")
+
+plot_socialising_help_recieved <- margot_plot(
+  group_tab_socialising_help_received,
+  type = "RR",
+  title = "Socialising effect on help recieved",
+  subtitle = ">= 1.4  x weekly hours socialising",
+  xlab = "",
+  ylab = "",
+  estimate_scale = 1,
+  base_size = 8,
+  text_size = 2.5,
+  point_size = .5,
+  title_size = 12,
+  subtitle_size = 11,
+  legend_text_size = 8,
+  legend_title_size = 10,
+  x_offset = 0,
+  x_lim_lo = 0,
+  x_lim_hi =  2
+)
+
+plot_socialising_help_recieved
+
+
 
 
 #f <- function(data, trt){
