--- a/manuscripts/24-lmtp-coop-church/man-lmtp-ow-coop-church.qmd
+++ b/manuscripts/24-lmtp-coop-church/man-lmtp-ow-coop-church.qmd
@@ -1,7 +1,7 @@
 ---
 title: "Causal effect of religious service attendance on charitable donations and volunteering, minority-group-attitudes, and help-received: evidence from a national panel study"
 abstract: |
-  This study investigates the causal effects of religious service attendance on cooperation. It combines panel data from a nationally diverse longitudional study of New Zealanders, the New Zealand Attitudes and Values Study (NZAVS, years 2018-2021) with robust methods for causal inference. We investigate three domains of behaviour: (1) self reported charity and volunteering (2) prejudice/acceptance (3) help-recieved from others (a novel measure). Our framework incorporates targeted machine learning models to balance confounders and doubly-robust methods for causal estimation, utilising Targeted Maximum Likelihood Estimation (TMLE). We find that ... .
+  This study uses panel data from a nationally representative longitudinal study of New Zealanders to systematically investigate the causal effects of religious service attendance on "prosociality" across three domains: (1) self reported charitable donations and volunteering; (2) minority-group "warmth"; (3) help-recieved from others (a novel measure) (New Zealand Attitudes and Values Study, N = 30,xxx). We examine the distinct effects of two interventions (1) gaining weekly religious attendance if not already attending weekly; (2) losing any religious attendance. To better assess the distinct effects of religious service we offer a parrallel analysis in which we compare comparable shifts in socialisting with one's community across the three prociality domains. **Self-reportated Charity and Volunteering** We find that weekly religious service, but not socialisting, increases expected charitable donations by about 700 per year. However both socialising and religious service cause comparable increases in volunteering. **Prejudice**: religious service attendance causes greater warmth to all social groups, with only warmth to Muslims crossing the 95% interval. Socialising does not reliably increase minority warmth except to Māori, the largest minority group in New Zealand. **Help received**. Religious Service augments help received from the community, but not from family and friends. Socialising augments help received from family and friends but not the community. The loss of religious service leads to a loss of volunteering but no a loss charitable donations. The loss of socialising also causes a loss of volunteering, but not a loss of expected charitable donations.  Overall, these findings reveal that the gain of religious service increases charitable donations and reduces prejudice.
 author: 
   - name: Joseph A. Bulbulia
     affiliation: Victoria University of Wellington, New Zealand
