--- a/manuscripts/24-lmtp-coop-church/man-lmtp-ow-coop-church.qmd
+++ b/manuscripts/24-lmtp-coop-church/man-lmtp-ow-coop-church.qmd
@@ -1,7 +1,7 @@
 ---
 title: "Causal effect of religious service attendance on charitable donations and volunteering, minority-group-attitudes, and help-received: evidence from a national panel study"
 abstract: |
-  This study uses panel data from a nationally representative longitudinal study of New Zealanders to systematically investigate the causal effects of religious service attendance on "prosociality" across three domains: (1) self reported charitable donations and volunteering; (2) minority-group "warmth"; (3) help-recieved from others (a novel measure) (New Zealand Attitudes and Values Study, N = 30,xxx). We examine the distinct effects of two interventions (1) gaining weekly religious attendance if not already attending weekly; (2) losing any religious attendance. To better assess the distinct effects of religious service we offer a parrallel analysis in which we compare comparable shifts in socialisting with one's community across the three prociality domains. **Self-reportated Charity and Volunteering** We find that weekly religious service, but not socialisting, increases expected charitable donations by about 700 per year. However both socialising and religious service cause comparable increases in volunteering. **Prejudice**: religious service attendance causes greater warmth to all social groups, with only warmth to Muslims crossing the 95% interval. Socialising does not reliably increase minority warmth except to Māori, the largest minority group in New Zealand. **Help received**. Religious Service augments help received from the community, but not from family and friends. Socialising augments help received from family and friends but not the community. The loss of religious service leads to a loss of volunteering but no a loss charitable donations. The loss of socialising also causes a loss of volunteering, but not a loss of expected charitable donations.  Overall, these findings reveal that the gain of religious service increases charitable donations and reduces prejudice.
+  This study employs panel data from the New Zealand Attitudes and Values Study, a longitudinal survey of 30,000 New Zealanders, to examine the causal impact of religious service attendance on prosocial behaviors across three dimensions: charitable donations and volunteering, attitudes towards minority groups ("warmth"), and help received from others—a novel metric. Our analysis distinguishes between the effects of initiating weekly religious service attendance for non-attendees and ceasing any religious participation. Additionally, we conduct a parallel comparison with a general shifts in community social engagement to discern the unique contributions of religious service to prosociality.  **Charitable Donations and Volunteering**:  Findings indicate that regular attendance at religious services increases annual charitable donations by approximately $700 per adult, without a corresponding effect from general social engagement. Both activities, however, similarly elevate volunteering rates. **Prejudice Reduction**: Attendance at religious services enhances warmth towards all social groupsl. In contrast, general social engagement only reliably improves attitudes towards Māori, New Zealand's largest minority group. **Help Received**: Engagement in regular religious services leads to increased community support, but not too greater support from family and friends. Conversely, general social engagement boosts support from family and friends but not from the community. The discontinuation of any religious service attendance results in reduced volunteering but does not affect charitable donations, suggesting that religious service may foster enduring charitable habits. In summary, acquiring religious service attendance enhances charitable giving and reduces prejudice more effectively than mere social engagement, with the cessation of religious services demonstrating distinct outcomes. This supports theories proposing that religious involvement cultivates charitable dispositions.
 author: 
   - name: Joseph A. Bulbulia
     affiliation: Victoria University of Wellington, New Zealand
